--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="hero-content">
                 <h1>5 REASONS<br>WOMEN LOVE NAD+</h1>
                 <p class="hero-subtitle">Energy · Skin · Focus · Cellular Repair<br>Metabolism Balance</p>
-                <a href="booking.html" class="btn-primary">BOOK NOW</a>
+                <a href="login.html" class="btn-primary">BOOK NOW</a>
             </div>
             <div class="hero-image">
                 <div class="bottle-display">
